Refactor CommandRegistry to return descriptors instead of types

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,6 +1,5 @@
 <Project>
     <PropertyGroup>
-        <MajorVersion>0</MajorVersion>
-        <MinorVersion>1</MinorVersion>
+        <AssemblyVersion>0.1.0.0</AssemblyVersion>
     </PropertyGroup>
 </Project>
