--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/src/Tests/Chel.UnitTests/bin/Debug/netcoreapp2.2/Chel.UnitTests.dll",
+            "program": "${workspaceFolder}/src/Sandbox/bin/Debug/netcoreapp2.2/Sandbox.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/src/Tests/Chel.UnitTests",
+            "cwd": "${workspaceFolder}/src/Sandbox",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
             "stopAtEntry": false
