--- a/tests/Chel.UnitTests/Chel.UnitTests.csproj
+++ b/tests/Chel.UnitTests/Chel.UnitTests.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
     <ProjectReference Include="../../src/Chel/Chel.csproj" />
+    <ProjectReference Include="../Chel.Abstractions.UnitTests/Chel.Abstractions.UnitTests.csproj" />
   </ItemGroup>
 
 </Project>
