--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,5 +1,6 @@
 <Project>
     <PropertyGroup>
         <AssemblyVersion>0.1.0.0</AssemblyVersion>
+        <LangVersion>10</LangVersion>
     </PropertyGroup>
 </Project>
