--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,5 +2,6 @@
     <PropertyGroup>
         <AssemblyVersion>0.1.0.0</AssemblyVersion>
         <LangVersion>11</LangVersion>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 </Project>
